
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================
Changes up to 0.88

   * ray_interior_color can enable solid interiors in the ray tracer!

   * fixed truncation error in view matrix composition

   * Roving details. Many new settings.

   * Roving origin.

   * ribbon_color, cartoon_color

   * overhauled color menu, improved performance of rainbow and color by chain

   * added color space menu to Tcl/Tk Ext. GUI

   * added color space clamping to better enable CMYK color matching as well
     as improve rendering quality

   * added z-ordered transparency (nice!) with menu controls

   * finished session save support for color ramps and gadgets

   * debugged and tested Quadro hardware support

   * Added mouse_scale and mouse_limit settings.  Reduced "jumping" of
     virtual trackball.

   * Worked to resolve threading issues with multiple demanding
     clients...

   * Finally fixed sporadic "GC object already in linked list" bug on
     mac.

   * huge cleanup of code to eliminate compiler warnings on VisualC
     and Windows & GCC32
      - at least one bug fixed
      - more careful handling of precision 

   * updated acknowledgements in the README file

   * Tcl/Tk external gui now also follows -X, -Y, -W, and -V window parameters
     "-V value" controls the size of the external Tcl/Tk GUI (if present)

   * INCOMPABILITY WARNING: "-X" option for launching rpcserver changed to "-R"
	in order to make room for "-X" and "-Y" options for positioning GLUT window.

   * command line options: "-X value" and "-Y value" along with 
	"-W value" and "-H value" can now be used to determine the position and size
	of the GLUT OpenGL window.
